--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-three/drei": "^9.106.0",
+    "@react-three/fiber": "^8.16.6",
     "next": "14.2.3",
     "node": "^20.14.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three": "^0.164.1"
   },
   "devDependencies": {
     "@types/node": "^20",
