--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.6",
+    "framer-motion": "^11.2.9",
     "next": "14.2.3",
     "node": "^20.14.0",
     "react": "^18",
